Breaking Change:   为 ChatMessage 添加了一个新字段 kidIndex 用于记录分支的指向位置，取代总数启用第一支，并且解决了并行工具调用时，切换分支后，工具下面的消息无法正常挂载的问题