@@ -24,7 +24,11 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 @Repository
 public class ChatMessageRepositoryImplement implements ChatMessageRepository {
@@ -40,6 +44,19 @@ public class ChatMessageRepositoryImplement implements ChatMessageRepository {
     public ChatMessageRepositoryImplement(JdbcTemplate jdbcTemplate, ObjectMapper objectMapper) {
         this.jdbcTemplate = jdbcTemplate;
         this.objectMapper = objectMapper;
+        // 自动迁移：为旧数据库添加 kid_index 列（分支记忆箭头），添加成功后按现有 active 状态回填。
+        // 新库由 schema.sql 直接建列（此处 ADD 因重复列被吞，无需回填）。
+        try {
+            jdbcTemplate.execute("ALTER TABLE chat_message ADD COLUMN kid_index TEXT NULL");
+            log.info("Migration: added kid_index column to chat_message");
+            try {
+                backfillKidIndex();
+            } catch (Exception ex) {
+                log.error("Migration: backfill kid_index failed", ex);
+            }
+        } catch (Exception e) {
+            log.debug("Migration: kid_index column may already exist, skipping. {}", e.getMessage());
+        }
     }
 
     /**
@@ -57,6 +74,7 @@ public class ChatMessageRepositoryImplement implements ChatMessageRepository {
             msg.setRole(set.getString("role"));
             msg.setReasoningContent(set.getString("reasoning_content"));
             msg.setActive(set.getBoolean("active"));
+            msg.setKidIndex(set.getString("kid_index"));
 
             try {
                 String createTime = set.getString("create_time");
@@ -205,6 +223,7 @@ public class ChatMessageRepositoryImplement implements ChatMessageRepository {
         String sql = "DELETE FROM chat_message WHERE id = ?";
         jdbcTemplate.update(sql, id);
 
+        clearKidIndexPointers(List.of(chatMessage));
         return chatMessage;
     }
 
@@ -218,7 +237,7 @@ public class ChatMessageRepositoryImplement implements ChatMessageRepository {
     public ChatMessage selectById(String id) {
         String sql = "SELECT * FROM chat_message WHERE id = ?";
         List<ChatMessage> results = jdbcTemplate.query(sql, rowMapper, id);
-        return results.isEmpty() ? null : results.get(0);
+        return results.isEmpty() ? null : results.getFirst();
     }
 
     @Override
@@ -266,8 +285,86 @@ public class ChatMessageRepositoryImplement implements ChatMessageRepository {
             return;
         }
         String placeholders = String.join(",", ids.stream().map(id -> "?").toArray(String[]::new));
+        List<ChatMessage> toDelete = jdbcTemplate.query(
+                "SELECT * FROM chat_message WHERE id IN (" + placeholders + ")",
+                rowMapper, ids.toArray());
         String sql = "DELETE FROM chat_message WHERE id IN (" + placeholders + ")";
         Object[] params = ids.toArray();
         jdbcTemplate.update(sql, params);
+
+        clearKidIndexPointers(toDelete);
+    }
+
+    @Override
+    public void updateKidIndex(String id, String kidIndex) {
+        String sql = "UPDATE chat_message SET kid_index = ? WHERE id = ?";
+        jdbcTemplate.update(sql, kidIndex, id);
+    }
+
+    /**
+     * 删除消息后，若其父的“分支记忆箭头”正指向被删消息，则清空（父重新成为有效尾部）。
+     */
+    private void clearKidIndexPointers(List<ChatMessage> deleted) {
+        if (deleted == null || deleted.isEmpty()) {
+            return;
+        }
+        for (ChatMessage m : deleted) {
+            if (m.getParentId() != null) {
+                jdbcTemplate.update(
+                        "UPDATE chat_message SET kid_index = NULL WHERE id = ? AND kid_index = ?",
+                        m.getParentId(), m.getId());
+            }
+        }
+    }
+
+    /**
+     * 回填 kid_index：仅针对已存在数据的旧库执行（列刚被加上）。
+     * <p>按现有 active 状态重建记忆箭头：
+     * <ul>
+     *   <li>父恰好 1 个活跃孩子 → 指向它（重建当前亮链）；</li>
+     *   <li>父 ≥2 个活跃孩子（并行工具扇出）→ 置 NULL（回亮时整层全亮）；</li>
+     *   <li>父 0 个活跃孩子（整支当前是暗的旧分支）→ 指向第一个孩子（退化今天的“首子”行为）。</li>
+     * </ul>
+     */
+    private void backfillKidIndex() {
+        List<ChatMessage> rows = jdbcTemplate.query(
+                "SELECT id, parent_id, active, create_time FROM chat_message ORDER BY create_time, id",
+                (rs, i) -> {
+                    ChatMessage m = new ChatMessage();
+                    m.setId(rs.getString("id"));
+                    m.setParentId(rs.getString("parent_id"));
+                    m.setActive(rs.getInt("active") == 1);
+                    m.setCreateTime(LocalDateTime.parse(rs.getString("create_time"), FORMATTER));
+                    return m;
+                });
+
+        Map<String, List<ChatMessage>> childrenByParent = new LinkedHashMap<>();
+        for (ChatMessage row : rows) {
+            if (row.getParentId() != null) {
+                childrenByParent.computeIfAbsent(row.getParentId(), k -> new ArrayList<>()).add(row);
+            }
+        }
+
+        int updated = 0;
+        for (Map.Entry<String, List<ChatMessage>> entry : childrenByParent.entrySet()) {
+            List<ChatMessage> children = entry.getValue();
+            String kid = null;
+            ChatMessage singleActive = null;
+            int activeCount = 0;
+            for (ChatMessage c : children) {
+                if (Boolean.TRUE.equals(c.getActive())) {
+                    activeCount++;
+                    singleActive = c;
+                }
+            }
+            if (activeCount == 1) {
+                kid = singleActive.getId();
+            } else if (activeCount == 0) {
+                kid = children.get(0).getId();
+            }
+            jdbcTemplate.update("UPDATE chat_message SET kid_index = ? WHERE id = ?", kid, entry.getKey());
+            updated++;
+        }
+        log.info("Migration: backfilled kid_index for {} parent nodes", updated);
     }
 }
